# test_task

./: README.md  main.py  pyproject.toml
config/: argparser.py
src/: constants.py  pandas_parser.py
