[project]
name = "test-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "test_tasks", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
